# bumbag

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  Makefile  README.md  cleanup.py  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: Makefile  benchmark.ipynb  benchmark.md  benchmark_freq_versus_value_counts.py  conf.py  developers.md  example.ipynb  index.md  make.bat  requirements.txt
docs/source/: benchmark.md  conf.py  example.ipynb  index.md
src/bumbag/: core.py  io.py  math.py  random.py  string.py  time.py
tests/: conftest.py  test_bumbag.py  test_core.py  test_io.py  test_itertools.py  test_math.py  test_random.py  test_string.py  test_time.py  test_toolz.py
