[tool.poetry]
name = "bumbag"
version = "0.1.0"
description = "A package for Python utility functions."
authors = ["BumBag Developers"]
license = "BSD 3-Clause"
readme = "README.md"
homepage = "https://github.com/estripling/bumbag"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
